correction background-color on mobile width

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -12,7 +12,7 @@
 
 
 html, body {
-    background-color:  #0b2c3b;
+    background-image: linear-gradient(to bottom, #0b2c3b, #0e455e);
     height: 100vh;
     width: 100vw;
 }
